# omen-agentkit

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  agent-starter  install.sh  pyproject.toml  starter.py  uninstall.sh
.github/: dependabot.yml
agent_starter/: __init__.py  agents.py  build_frontend.py  capabilities.py  cli.py  codex_skill.py  context_budget.py  deployment.py  deployment_build.py  deployment_check.py  deployment_ci.py  deployment_gate.py  deployment_plan.py  deployment_secrets.py  deployment_staging.py  diagnostics.py  doctor.py  draft_sessions.py  entry_modes.py  generator.py  idea_prompts.py  model_policy.py  models.py  performance_checks.py  policy_fragments.py  recommendation.py  recommendation_cache.py  release_artifacts.py  release_safety.py  sandbox.py  task_composer.py  templates.py  toolchains.py  ui_schema.py  wizard.py
docs/: AGENT-GUIDE.md  AGENT-INTEGRATION.md  ANSWER-FILE-REFERENCE.md  ARCHITECTURE.md  BURN-IN.md  DEVELOPMENT.md  END-TO-END-JOURNEYS.md  EXISTING-PROJECT-FIXTURES.md  GITHUB-ACTIONS-UPDATE-POLICY.md  GPT-5.6-SOL-MIGRATION-REPORT.md  GPT-5.6-SOL-MIGRATION-STATUS.md  HUMAN-START.md  IMPLEMENTATION-NOTES.md  MAINTAINER-GUIDE.md  OMEN_AGENTKIT_GPT_5_6_SOL_REVIEW_AND_PHASE_PLAN.txt  OPERATIONS-GUIDE.md  PERFORMANCE-RESOURCE-CHECKS.md  PROGRESS.md  RELEASE-CANDIDATE-0.5.0.md  RELEASE-CANDIDATE-0.5.1.md  RELEASE-CANDIDATE-0.5.2.md  RELEASE-CANDIDATE-0.5.3.md  RELEASE-CANDIDATE-0.5.4.md  RELEASE-CANDIDATE-0.5.5.md  RELEASE-CANDIDATE-0.5.6.md  RELEASE-SAFETY.md  SECURITY-MODEL.md  SECURITY-REGRESSION-SUITE.md  STRUCTURE-POLICY.md  SUPPLY-CHAIN-POLICY.md  SUPPORTED-HOSTS.md  TEMPLATE-CATALOG.md  USER-GUIDE.md
examples/: browser-game-codex.json  cli-python-sqlite-codex.json  existing-php-mariadb-renovation.json
scripts/: audience-documentation-check.sh  check.sh  end-to-end-journey-check.sh  existing-project-fixture-check.sh  install-smoke-test.sh  migration-report-check.sh  package-smoke-test.sh  performance-resource-check.sh  quality-check.sh  release-artifact-smoke.sh  release-candidate-check.sh  security-regression-check.sh  smoke-test.sh
tests/: test_agents.py  test_audience_documentation.py  test_bootstrap.py  test_build_frontend.py  test_capabilities.py  test_cli.py  test_codex_skill.py  test_config_schema.py  test_context_budget.py  test_debian_provider.py  test_deployment.py  test_deployment_build.py  test_deployment_check.py  test_deployment_ci.py  test_deployment_gate.py  test_deployment_plan.py  test_deployment_secrets.py  test_deployment_staging.py  test_diagnostics.py  test_doctor.py  test_draft_sessions.py  test_end_to_end_journeys.py  test_entry_modes.py  test_existing_project_fixtures.py  test_generator.py  test_gui.py  test_idea_prompts.py  test_migration_report.py  test_model_policy.py  test_models.py  test_performance_resources.py  test_platforms.py  test_policy_fragments.py  test_provider_matrix.py  test_recommendation.py  test_recommendation_cache.py  test_release.py  test_release_artifacts.py  test_release_candidate.py  (+9 more)
(+59 files in other folders)
