[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-agent-starter-kit"
version = "0.3.0"
description = "Generate documented OpenAI Codex CLI project workspaces for CachyOS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "CLI AI Agent Starter Kit contributors"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
agent-starter = "agent_starter.cli:main"

[tool.setuptools]
packages = ["agent_starter"]
