[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-agent-starter-kit"
version = "0.4.8"
description = "Generate documented OpenAI Codex CLI project workspaces for CachyOS"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{name = "CLI AI Agent Starter Kit contributors"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
gui = ["pywebview>=5"]

[project.scripts]
agent-starter = "agent_starter.cli:main"
agent-starter-gui = "agent_starter.gui.app:main"

[tool.setuptools]
packages = ["agent_starter", "agent_starter.gui"]

[tool.setuptools.package-data]
"agent_starter.gui" = ["static/*"]
