[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-agent-starter-kit"
version = "0.5.4"
description = "Generate documented OpenAI Codex CLI project workspaces for CachyOS"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{name = "CLI AI Agent Starter Kit contributors"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
gui = ["pywebview>=5"]
quality = [
  "ruff>=0.15.20,<0.16",
  "mypy>=2.3,<2.4",
  "bandit>=1.9.4,<1.10",
  "coverage>=7.15.1,<7.16",
]

[project.scripts]
agent-starter = "agent_starter.cli:main"
agent-starter-gui = "agent_starter.gui.app:main"

[tool.setuptools.packages.find]
include = ["agent_starter*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"agent_starter.gui" = ["static/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
files = ["agent_starter/model_policy.py", "agent_starter/config_schema", "agent_starter/deployment_ci.py"]
follow_imports = "skip"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["agent_starter"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
